--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,6 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
-  flutter_blue:
   flutter_bluetooth_serial:
   flutter_screenutil: 
   
@@ -50,11 +49,13 @@ dependencies:
   go_router: ^13.0.1
   hive: ^2.2.3
   http: ^1.2.0
+  http_parser:
   image_picker: ^1.0.8
   intl: null
   shared_preferences: ^2.2.3
   smooth_page_indicator: ^1.1.0
   url_launcher: ^6.2.6
+  slide_to_act:
   
 
 dev_dependencies:
